--- a/stylesheet4.css
+++ b/stylesheet4.css
@@ -46,7 +46,6 @@ nav li a:hover{
     color: #ff8c69;
     transition: all 0.4s ease 0s;
 }
-
 body {
     background-color: #eee;
     font-family: "Poppins", sans-serif;
@@ -58,71 +57,69 @@ body {
 
 .grid {
     display: grid;
-    width: 114em;
-    grid-gap: 6rem;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    width: 1824px;
+    grid-gap: 96px;
+    grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
     align-items: start;
 }
 
 .grid-item {
     background-color: #fff;
-    border-radius: 0.4rem;
+    border-radius: 6.4px;
     overflow: hidden;
-    box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0 48px 96px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: 0.2s;
 }
 
     .grid-item:hover {
         transform: translateY(-0.5%);
-        box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.5);
+        box-shadow: 0 64px 128px rgba(0, 0, 0, 0.5);
     }
 
 .card-img {
     display: block;
     width: 100%;
-    height: 25rem;
+    height: 100px;
     object-fit: cover;
-    
 }
 
 .card-content {
-    padding: 3rem;
+    padding: 48px;
 }
 
 .card-header {
-    font-size: 3rem;
+    font-size: 48px;
     font-weight: 500;
     color: #0d0d0d;
-    margin-bottom: 1.5rem;
+    margin-bottom: 24px;
 }
 
 .card-text {
-    font-size: 1.6rem;
-    letter-spacing: 0.1rem;
+    font-size: 20px;
+    letter-spacing: 1.6px;
     line-height: 1.7;
     color: #3d3d3d;
-    margin-bottom: 2.5rem;
+    margin-bottom: 40px;
 }
 
 .card-btn {
     display: block;
     width: 100%;
-    padding: 1.5rem;
-    font-size: 2rem;
+    padding: -40px;
+    font-size: 20px;
     text-align: center;
     color: #3363ff;
     background-color: #d8e0fd;
     border: none;
-    border-radius: 0.4rem;
+    border-radius: 6.4px;
     transition: 0.2s;
     cursor: pointer;
-    letter-spacing: 0.1rem;
-    padding: 7px;
+    letter-spacing: 1.6px;
 }
 
     .card-btn span {
-        margin-left: 1rem;
+        margin-left: 16px;
         transition: 0.2s;
     }
 
@@ -133,15 +130,15 @@ body {
 
         .card-btn:hover span,
         .card-btn:active span {
-            margin-left: 1.5rem;
+            margin-left: 24px;
         }
 
-@media only screen and (max-width: 60em) {
+@media only screen and (max-width: 960px) {
     body {
-        padding: 3rem;
+        padding: 48px;
     }
 
     .grid {
-        grid-gap: 3rem;
+        grid-gap: 48px;
     }
 }
